2013-03-05  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/diagnostic.s: Add test.
	* gas/aarch64/diagnostic.l: Update.
	* gas/aarch64/illegal.s: Add test.
	* gas/aarch64/illegal.l: Update.
	* gas/aarch64/fpmov.s: New file.
	* gas/aarch64/fpmov.d: New file.

2013-02-15  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/system.s: Add tests.
	* gas/aarch64/system.d: Update.

2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/alias.s: Add new tests.
	* gas/aarch64/alias.d: Update.
	* gas/aarch64/no-aliases.d: Update.

2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/diagnostic.s: Add test.
	* gas/aarch64/diagnostic.l: Update.

2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/int-insns.d: Update.
	* gas/aarch64/mov.d: Update.
	* gas/aarch64/reloc-insn.d: Update.

2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/system.d: Update.

2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/sysreg-1.s: Add tests of rmr_el1, rmr_el2 and rmr_el3.
	* gas/aarch64/sysreg-1.d: Update.
	* gas/aarch64/illegal.s: Add tests of daifset and daifclr.
	* gas/aarch64/illegal.d: Update.

2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/illegal-2.s: Add test case.
	* gas/aarch64/illegal-2.l: Likewise.

2013-01-22  Alan Modra  <amodra@gmail.com>

	Apply mainline patches
	2012-11-23  Alan Modra  <amodra@gmail.com>
	* gas/ppc/astest2.d: Pass -Mppc to objdump.

	2012-11-14  Ulrich Weigand  <uweigand@de.ibm.com>
	* gas/ppc/astest.d: Update for fixup changes.
	* gas/ppc/astest64.d: Likewise.
	* gas/ppc/astest2.d: Likewise.
	* gas/ppc/astest2_64.d: Likewise.
	* gas/ppc/test1elf32.d: Likewise.
	* gas/ppc/test1elf64.d: Likewise.

	2012-10-29  Alan Modra  <amodra@gmail.com>
	* gas/cfi/cfi.exp: Remove redundant ppc test.  Exclude
	powerpc-pe targets from cfi-common-6 test.
	* gas/cfi/cfi-ppc-1.d: Use objdump to handle pe.
	* gas/cfi/cfi-ppc-1.s: Don't use .type and .size.